--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
 
   <header>
     <div class="header-container">
+
       <div class="logo-search">
         <a href="#"><img src="assets/github-logo.png" alt="Github" class="header-logo"></a>
         <input type="text" class="header-search" placeholder="Search GitHub">
@@ -27,7 +28,14 @@
             </a>
           </ul>
       </div>
-      <div class="header-icons"></div>
+
+      <ul class="header-icons">
+        <a href="#">
+          <li class="header-icon"><i class="fa fa-bell"></i></li></a>
+        <li class="header-icon header-lists"><i class="fa fa-plus"></i><span class="triangle"></span></li>
+        <li class="header-icon header-lists"><img src="profilepic" alt="Profile" class="profile-thumbnail"><span class="triangle"></span></li>
+      </ul>
+
     </div>
   </header>
 
