Added large profile pic with name and username under in sidebar, all from api

--- a/index.html
+++ b/index.html
@@ -33,11 +33,23 @@
         <a href="#">
           <li class="header-icon"><i class="fa fa-bell"></i></li></a>
         <li class="header-icon header-lists"><i class="fa fa-plus"></i><span class="triangle"></span></li>
-        <li class="header-icon header-lists"><img src="profilepic" alt="Profile" class="profile-thumbnail"><span class="triangle"></span></li>
+        <li class="header-icon header-lists"><img src="assets/default.jpg" alt="Profile" class="profile-thumbnail"><span class="triangle"></span></li>
       </ul>
 
     </div>
   </header>
+
+  <div class="main-body-container">
+
+    <div class="sidebar-container">
+      <img src="assets/default.jpg" alt="Profile" class="profile-pic">
+      <h1 class="user-full-name"></h1>
+      <h3 class="user-name"></h3>
+
+    </div>
+
+    <div class="repos-container"></div>
+  </div>
 
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="scripts/main.js"></script>
