--- a/index.html
+++ b/index.html
@@ -138,23 +138,6 @@
       </div>
 
       <div class="repos-list">
-        <div class="repos">
-          <div class="main-line">
-            <a href="#">
-              <h1 class="repo-name">Repo Name Here</h1>
-            </a>
-            <ul class="repo-stats">
-              <li class="repo-stat js-language">Javascript</li>
-              <a href="#">
-                <li class="repo-stat js-stargazer"><i class="fa fa-star"></i>0</li>
-              </a>
-              <a href="#">
-                <li class="repo-stat js-forks"><i class="fa fa-code-fork"></i>0</li>
-              </a>
-            </ul>
-          </div>
-          <h3 class="repo-updated">Updated 2 days ago</h3>
-        </div>
       </div>
 
     </div>
@@ -177,7 +160,9 @@
           </a>
         </ul>
       </div>
-      <h3 class="repo-updated">Updated 2 days ago</h3>
+      <div class="repo-lines">
+        <h3 class="repo-updated">Updated 2 days ago</h3>
+      </div>
     </div>
   </script>
 
