Got updated dates to work

--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
         </ul>
       </div>
       <div class="repo-lines">
-        <h3 class="repo-updated">Updated 2 days ago</h3>
       </div>
     </div>
   </script>
 
+  <script src="bower_components/moment/min/moment.min.js"></script>
   <script src="bower_components/handlebars/handlebars.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="scripts/main.js"></script>
