All elements in place.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div class="logo-search">
         <a href="#">
-          <img src="assets/github-logo.png" alt="Github" class="header-logo">
+          <i class="fa fa-github header-logo"></i>
         </a>
         <input type="text" class="header-search" placeholder="Search GitHub">
         <ul class="header-navs">
@@ -143,6 +143,57 @@
     </div>
 
   </div>
+
+  <footer>
+    <div class="footer-container">
+      <i class="fa fa-github"></i>
+      <div class="left-footer">
+        <ul class="left-footer-links">
+          <li class="footer-link">&copy; 2015 GitHub, Inc.</li>
+          <a href="#">
+            <li class="footer-link">Terms</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Privacy</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Security</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Contact</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Help</li>
+          </a>
+        </ul>
+      </div>
+      <div class="right-footer">
+        <ul class="right-footer-links">
+          <a href="#">
+            <li class="footer-link">Status</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">API</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Training</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Shop</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Blog</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">About</li>
+          </a>
+          <a href="#">
+            <li class="footer-link">Pricing</li>
+          </a>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
   <script id="repo-template" type="text/x-handlebars-template">
     <div class="repos">
