Tooltips added to icons in header

--- a/index.html
+++ b/index.html
@@ -35,14 +35,22 @@
 
       <ul class="header-icons">
         <a href="#">
-          <li class="header-icon"><i class="fa fa-bell"></i></li>
+          <li class="header-icon">
+            <i class="fa fa-bell"></i>
+            <div class="tooltip js-notification-tooltip"></div>
+            <div class="tooltip-triangle"></div>
+          </li>
         </a>
         <li class="header-icon header-lists"><i class="fa fa-plus"></i>
           <span class="triangle"></span>
+          <div class="tooltip">Create new...</div>
+          <div class="tooltip-triangle"></div>
         </li>
         <li class="header-icon header-lists">
           <img src="assets/default.jpg" alt="Profile" class="profile-thumbnail js-profile-thumbnail">
           <span class="triangle"></span>
+          <div class="tooltip">View profile and more</div>
+          <div class="tooltip-triangle"></div>
         </li>
       </ul>
 
